<resources>
    <string name="app_name">MyBank</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank">Bank</string>
    <string name="label">User</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="recent">Recentes</string>
    <string name="payment">Pagamento</string>
    <string name="conta">Conta</string>
    <string name="saldo">Saldo</string>
    <string name="field_required">preenchimento obrigatório</string>
    <string name="msg_invalid_email">Usuário inválido Cpf/Email</string>
    <string name="email">e-mail</string>
    <string name="password_invalid">senha deve conter  3 caracteres, uma letra maiuscula, um caracter especial e um caracter alfanumérico</string>
    <string name="cpf_invalid">Usuário Invalido Cpf/Email</string>
</resources>